# colorblast

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-any-lexer.yml  ci-colorblast-cli.yml  ci-colorblast.yml  ci-text-scanner.yml
any-lexer/: Cargo.toml  README.md
any-lexer/src/: lib.rs
any-lexer/src/lexers/: c.rs  cpp.rs  css.rs  json.rs  jsonc.rs  lisp.rs  mod.rs  python.rs  rust.rs  scss.rs  swift.rs
colorblast/: Cargo.toml  README.md
colorblast-cli/: Cargo.toml  README.md
colorblast-cli/src/: main.rs
colorblast/examples/: custom.rs  rust.rs  tokens.rs
colorblast/src/: ansi.rs  html.rs  lib.rs  style.rs  token.rs
colorblast/src/lexers/: json.rs  jsonc.rs  mod.rs  rust.rs  text.rs
colorblast/src/stylize/: mod.rs  rust.rs
text-scanner/: Cargo.toml  README.md
text-scanner/benches/: accept_impl.rs  accept_vs_test.rs  scan_line_comment.rs
text-scanner/examples/: math.rs
text-scanner/src/: lib.rs
text-scanner/src/ext/: c.rs  css.rs  java.rs  json.rs  jsonc.rs  lisp.rs  mod.rs  python.rs  rust.rs  scss.rs  swift.rs
