[package]
name = "text-scanner"
version = "0.0.1"
edition = "2021"
description = "A UTF-8 char-oriented, zero-copy, text and code scanning library"
keywords = ["lexer", "tokenization", "token", "streaming", "parsing"]
categories = ["parsing", "text-processing"]
repository = "https://github.com/vallentin/colorblast"
license = "Zlib"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
char-ranges = "0.1"
