[package]
name = "text-scanner"
version = "0.0.3"
edition = "2021"
description = "A UTF-8 char-oriented, zero-copy, text and code scanning library"
keywords = ["lexer", "tokenization", "token", "streaming", "parsing"]
categories = ["parsing", "text-processing"]
repository = "https://github.com/vallentin/colorblast"
license = "Zlib"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["ext"]
ext = []

[dependencies]
char-ranges = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "accept_impl"
harness = false

[[bench]]
name = "accept_vs_test"
harness = false

[[bench]]
name = "scan_line_comment"
harness = false
